--- a/app/src/main/res/layout/activity_highscore.xml
+++ b/app/src/main/res/layout/activity_highscore.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="382dp"
+        android:layout_width="match_parent"
         android:layout_height="41dp"
         android:layout_weight="1"
         android:text="Hall of the Fame"
@@ -19,12 +19,12 @@
         tools:layout_editor_absoluteY="0dp" />
 
     <LinearLayout
-        android:layout_width="360dp"
-        android:layout_height="451dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="13dp"
         tools:layout_editor_absoluteY="48dp"
-        android:layout_marginTop="0dp">
+        android:layout_below="@+id/textView2">
 
         <TextView
             android:id="@+id/textView3"
@@ -67,4 +67,4 @@
             tools:layout_editor_absoluteY="8dp"></LinearLayout>
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</android.widget.RelativeLayout>
