--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,11 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:visibility="visible"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/loginbutton"
             android:layout_width="157dp"
             android:layout_height="48dp"
             android:elevation="0dp"
@@ -28,10 +29,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:src="@drawable/small_tile"
             app:srcCompat="@mipmap/ic_launcher"
             tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="601dp"
-            android:src="@drawable/small_tile"/>
+            tools:layout_editor_absoluteY="601dp" />
 
         <Button
             android:id="@+id/newgame"
@@ -69,4 +70,4 @@
 
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</android.widget.RelativeLayout>
