--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -18,34 +18,50 @@
             android:layout_height="87dp"
             android:orientation="horizontal"
             tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="8dp">
+            tools:layout_editor_absoluteY="8dp"
+            android:weightSum="1">
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/pausebutton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="0.08"
-                android:text="pause" />
+                android:text="▋▋"
+                android:textAlignment="center"
+                android:textSize="20sp" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/scorecounter"
                 android:layout_width="119dp"
                 android:layout_height="match_parent"
-                android:text="points" />
+                android:layout_weight="0.19"
+                android:text="points"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:textSize="36sp" />
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/timecounter"
                 android:layout_width="77dp"
                 android:layout_height="match_parent"
-                android:text="time" />
+                android:layout_weight="0.99"
+                android:text="time"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:textSize="36sp" />
 
         </LinearLayout>
 
-        <FrameLayout
+        <TextView
+            android:id="@+id/characterscreen"
             android:layout_width="match_parent"
-            android:layout_height="280dp">
-
-        </FrameLayout>
+            android:layout_height="wrap_content"
+            android:text="A"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColorHighlight="@android:color/darker_gray"
+            android:textSize="250sp"
+            android:gravity="center"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,25 +69,34 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/x1button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="1" />
+                android:backgroundTint="@android:color/holo_orange_light"
+                android:text="1"
+                android:textColor="@android:color/background_light"
+                android:textSize="36sp" />
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/x2button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="2" />
+                android:backgroundTint="@android:color/holo_orange_dark"
+                android:text="2"
+                android:textColor="@android:color/background_light"
+                android:textSize="36sp" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/x3button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="3" />
+                android:backgroundTint="@android:color/holo_red_light"
+                android:text="3"
+                android:textColor="@android:color/background_light"
+                android:textSize="36sp" />
         </LinearLayout>
     </LinearLayout>
 
