--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,16 @@
         android:orientation="vertical"
         android:visibility="visible"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        tools:layout_editor_absoluteY="8dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <Button
             android:id="@+id/loginbutton"
             android:layout_width="157dp"
             android:layout_height="48dp"
+            android:backgroundTint="@android:color/transparent"
             android:elevation="0dp"
             android:text="Login"
             android:textAlignment="center"
@@ -27,9 +31,9 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_weight="1"
-            android:src="@drawable/small_tile"
+            android:src="@drawable/logo_big"
             app:srcCompat="@mipmap/ic_launcher"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="601dp" />
@@ -39,7 +43,9 @@
             android:layout_width="match_parent"
             android:layout_height="54dp"
             android:layout_weight="1"
+            android:backgroundTint="@android:color/darker_gray"
             android:text="New game"
+            android:textColor="@android:color/background_light"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="16dp" />
 
@@ -48,7 +54,9 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_weight="1"
+            android:backgroundTint="@android:color/darker_gray"
             android:text="Highscore"
+            android:textColor="@android:color/background_light"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="231dp" />
 
@@ -57,7 +65,9 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_weight="1"
+            android:backgroundTint="@android:color/darker_gray"
             android:text="Exit"
+            android:textColor="@android:color/background_light"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="290dp" />
 
