--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
             android:elevation="0dp"
             android:text="Login"
             android:textAlignment="center"
+            android:textSize="18sp"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="231dp" />
 
@@ -46,6 +47,7 @@
             android:backgroundTint="@android:color/darker_gray"
             android:text="New game"
             android:textColor="@android:color/background_light"
+            android:textSize="36sp"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="16dp" />
 
@@ -57,6 +59,7 @@
             android:backgroundTint="@android:color/darker_gray"
             android:text="Highscore"
             android:textColor="@android:color/background_light"
+            android:textSize="36sp"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="231dp" />
 
@@ -68,6 +71,7 @@
             android:backgroundTint="@android:color/darker_gray"
             android:text="Exit"
             android:textColor="@android:color/background_light"
+            android:textSize="36sp"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="290dp" />
 
